--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -14,6 +14,8 @@ events {
 http {
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
+    
+    proxy_buffering off;
 
     log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
                       '$status $body_bytes_sent "$http_referer" '
